<resources>
    <string name="app_name">Get fit</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>/
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 5 characters or more</string>
    <string name="login_failed">Login failed</string>
    <string name="name">Health and fitness</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email_or_username">Email</string>
    <string name="password">Password</string>
    <string name="register_with_us">Register with us</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forget_password">Forget password</string>
    <string name="create_account">Create account</string>
    <string name="or">OR</string>
    <string name="get_fit">Get fit</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="abs">Abs</string>
    <string name="thighs">Thighs</string>
    <string name="tummy">Tummy</string>
    <string name="posture">Posture</string>
    <string name="russian_twist">RUSSIAN TWIST</string>
    <string name="reverse_crunches">REVERSE CRUNCHES</string>
    <string name="abdominal_crunches">ABDOMINAL CRUNCHES</string>
    <string name="crunch_kicks">CRUNCH KICKS</string>
    <string name="lose_belly_fat_and_flatten_your_tummy_with_our_short_and_effective_workouts_at_home_you_will_get_a_flat_stomach_in_just_a_few_weeks">Lose belly fat and flatten your tummy with our short and effective workouts at home!You will get a flat stomach in just a few weeks</string>
    <string name="flat_stomach">FLAT STOMACH</string>
    <string name="slim_and_tone_your_legs_bikini_ready_legs_are_no_longer_a_dream">Slim and tone your legs;bikini ready legs are no longer a dream!</string>
    <string name="side_hop">SIDE HOP</string>
    <string name="lunges">LUNGES</string>
    <string name="sumo_squat">SUMO SQUAT</string>
    <string name="arms">Arms</string>
    <string name="sculpt_your_arms_in_a_short_time_and_wow_them_with_your_toned_arms">Sculpt your arms in a short time and wow them with your toned arms</string>
    <string name="planks">PLANKS</string>
    <string name="facebook_app_id">197224979818300</string>
    <string name="fb_login_protocol_scheme">fb124</string>
    <string name="facebook_client_token">f69ee6d22abb48c904ff92b7c2e5ce4d</string>
    <string name="login_with">Login with;</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username :</string>
    <string name="email">Email :</string>
</resources>