<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".TummyWorkoutActivity">
    <LinearLayout
        android:background="@drawable/topbgtwo"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:orientation="vertical">
        <TextView
            android:textColorHighlight="@color/white"
            android:id="@+id/flat_stomach"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/flat_stomach"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/abt_flatstomach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/lose_belly_fat_and_flatten_your_tummy_with_our_short_and_effective_workouts_at_home_you_will_get_a_flat_stomach_in_just_a_few_weeks"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="783dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/crunchkicks_card"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple_200"
            android:elevation="10dp"
            app:cardCornerRadius="80dp">
            <LinearLayout
                android:id="@+id/crunch_kicks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crunch_kicks"
                    android:textSize="40sp"
                    android:paddingTop="20dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/abdominal_crunches_card"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:elevation="10dp"
            android:backgroundTint="@color/purple_200"
            app:cardCornerRadius="80dp">
            <LinearLayout
                android:id="@+id/abdominal_crunches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/abdominal_crunches"
                    android:textSize="35sp"
                    android:textAlignment="center"
                    android:paddingTop="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/reverse_crunches_card"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple_200"
            app:cardCornerRadius="80dp">
            <LinearLayout
                android:id="@+id/reverse_crunches"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reverse_crunches"
                    android:textSize="35sp"
                    android:textAlignment="center"
                    android:paddingTop="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/russian_twist_card"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple_200"
            app:cardCornerRadius="80dp">
            <LinearLayout
                android:id="@+id/russian_twist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/russian_twist"
                    android:textSize="35sp"
                    android:textAlignment="center"
                    android:paddingTop="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>