<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ThighWorkoutActivity">

    <LinearLayout
        android:background="@drawable/topbgthree"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:orientation="vertical">
        <TextView
            android:textColorHighlight="@color/white"
            android:id="@+id/thighs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/thighs"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/abt_thighs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/slim_and_tone_your_legs_bikini_ready_legs_are_no_longer_a_dream"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="783dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/sidehop_card"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/teal_200"
            android:elevation="10dp"
            app:cardCornerRadius="80dp">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/side_hop"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:paddingTop="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/high_stepping_card"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:elevation="10dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="80dp">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="HIGH STEPPING"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:paddingTop="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/lunges_card"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="80dp">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lunges"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:paddingTop="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/sumosquat_card"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/teal_200"
            app:cardCornerRadius="80dp">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sumo_squat"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:paddingTop="20sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>