<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/appbackground"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="105dp"
        android:layout_height="103dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:src="@drawable/baseline_sports_gymnastics_24" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="serif"
        android:text="@string/get_fit"
        android:layout_marginTop="4dp"/>


    <androidx.cardview.widget.CardView
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Don't have an account ?"
                android:textAlignment="center"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2" >


                <TextView
                    android:id="@+id/signUp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="5dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />


            </LinearLayout>
            <LinearLayout
                android:id="@+id/login_layout"
                android:background="@color/white"
                android:padding="25dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:shapeAppearanceOverlay="@style/button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="3dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eMailUsername"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:hint="@string/email_or_username"
                        android:inputType="textPersonName|textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    app:shapeAppearanceOverlay="@style/button4"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="3dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    app:endIconMode="password_toggle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:id="@+id/password"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/password"
                        />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:id="@+id/login"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:elevation="15dp"
                android:gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                app:shapeAppearanceOverlay="@style/button5"
                android:backgroundTint="@color/blueColor"/>





        </LinearLayout>

    </androidx.cardview.widget.CardView>




</LinearLayout>